--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
   "dependencies": {
     "decode-html": "^2.0.0",
     "events": "^3.0.0",
-    "expo": "^32.0.0",
+    "expo": "^34.0.3",
+    "expo-camera": "^5.0.1",
+    "expo-permissions": "^5.0.1",
     "firebase": "^6.2.3",
     "html-entities": "^1.2.1",
     "html-to-text": "^5.1.1",
-    "native-base": "^2.13.4",
+    "native-base": "^2.13.5",
     "prop-types": "^15.7.2",
-    "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react": "16.8.3",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-easy-grid": "^0.2.1",
     "react-native-gesture-responder": "^0.1.1",
     "react-native-vector-icons": "^6.5.0",
