--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "decode-html": "^2.0.0",
     "events": "^3.0.0",
-    "expo": "^34.0.3",
+    "expo": "^33.0.0",
+    "expo-analytics-amplitude": "^5.0.1",
     "expo-camera": "^5.0.1",
     "expo-permissions": "^5.0.1",
     "firebase": "^6.2.3",
@@ -19,8 +20,9 @@
     "native-base": "^2.13.5",
     "prop-types": "^15.7.2",
     "react": "16.8.3",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-easy-grid": "^0.2.1",
+    "react-native-gesture-handler": "^1.3.0",
     "react-native-gesture-responder": "^0.1.1",
     "react-native-vector-icons": "^6.5.0",
     "react-native-youtube": "^1.1.0",
