--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo-analytics-amplitude": "^5.0.1",
     "expo-camera": "^5.0.1",
     "expo-permissions": "^5.0.1",
+    "expo-secure-store": "^5.0.1",
     "firebase": "^6.2.3",
     "html-entities": "^1.2.1",
     "html-to-text": "^5.1.1",
